--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,10 @@
       <artifactId>commons-io</artifactId>
       <version>1.4</version>
     </dependency>
+    <dependency>
+      <groupId>rhino</groupId>
+      <artifactId>js</artifactId>
+      <version>1.7R2</version>
+    </dependency>
   </dependencies>
 </project>
